# horizon-server

./: .env  Cargo.toml  README.md
src/: main.rs  middleware.rs
src/admin/: client.rs  command.rs  middleware.rs  mod.rs  ping.rs  register.rs  sessions.rs  upload.rs
src/admin/ws/: mod.rs
src/admin/ws/clients/: list.rs  mod.rs
src/admin/ws/commands/: cancel.rs  mod.rs
src/admin/ws/uploads/: mod.rs
src/client/: commands.rs  mod.rs  ping.rs  register.rs  result.rs  upload.rs
src/models/: admin.rs  app_state.rs  client.rs  command_result.rs  commands.rs  file.rs  jwt.rs  mod.rs  session.rs  upload.rs
tests/: test.rs
tests/admin/: clients.http  command.http  ping.http  register.http  sessions.http  upload.http
tests/client/: command.http  ping.http  register.http
